--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:background="@color/white">
 
 
-<!-- Portada del álbum -->
+    <!-- Portada del álbum -->
     <ImageView
         android:id="@+id/album_cover"
         android:layout_width="300dp"
@@ -24,7 +24,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:text="@string/song_title"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold" />
 
@@ -49,7 +49,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:progress="30"
-        android:progressTint="@color/white" />
+        android:progressTint="@color/black" />
 
     <!-- Tiempos -->
     <LinearLayout
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="01:30"
-            android:textColor="@color/white" />
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/total_time"
@@ -75,7 +75,7 @@
             android:layout_weight="1"
             android:gravity="end"
             android:text="04:15"
-            android:textColor="@color/white" />
+            android:textColor="@color/black" />
     </LinearLayout>
 
     <!-- Controles de reproducción -->
@@ -86,6 +86,15 @@
         android:layout_marginTop="60dp"
         android:gravity="center"
         android:orientation="horizontal">
+        <ImageButton
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/ic_previous"
+            android:scaleType="fitCenter"
+            android:background="@null"
+            android:id="@+id/MenosSegundos"
+            android:contentDescription="Replay 10 seconds"
+            />
 
         <ImageButton
             android:id="@+id/btn_previous"
@@ -115,7 +124,30 @@
             android:src="@drawable/ic_next"
             android:scaleType="fitCenter"
             android:contentDescription="@string/next" />
+
+        <ImageButton
+            android:id="@+id/MasSegundos"
+            android:background="@null"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/ic_next"
+            android:scaleType="fitCenter"
+            android:contentDescription="Forward 10 seconds"
+            />
     </LinearLayout>
+
+    <!-- Botón de modo de reproducción (Shuffle/Repeat) -->
+    <ImageButton
+        android:id="@+id/btn_play_mode"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_margin="20dp"
+        android:background="@null"
+        android:src="@drawable/ic_repeat"
+        android:scaleType="fitCenter"
+        android:contentDescription="Play Mode" />
 
     <!-- Botón de lista de reproducción -->
     <ImageButton
